<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".GuideFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/g1"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="150dp"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:background="@drawable/tabbar2"
            android:gravity="center"
            android:shadowColor="@color/textbody2"
            android:shadowRadius="10"
            android:shadowDy="1"
            android:shadowDx="1"/>

        <TextView
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/g2"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:background="@drawable/tabbar2"
            android:gravity="center"
            android:shadowColor="@color/textbody2"
            android:shadowRadius="10"
            android:shadowDy="1"
            android:shadowDx="1"/>

        <TextView
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/g3"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:background="@drawable/tabbar2"
            android:gravity="center"
            android:shadowColor="@color/textbody2"
            android:shadowRadius="10"
            android:shadowDy="1"
            android:shadowDx="1"/>

        <Button
            android:id="@+id/btnB"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"
            android:text="Trở lại trang nhất"
            android:contentDescription="@string/back_button"
            android:backgroundTint="@color/black"
            android:shadowColor="@color/textbody2"
            android:shadowRadius="10"
            android:shadowDy="1"
            android:shadowDx="1"
            android:textStyle="bold"
            android:textSize="15dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>